// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`this-replacing-babel-plugin no replace of this in global scope this in function decaration 1`] = `
"function qq() {
  this.BEM = 11;
}"
`;

exports[`this-replacing-babel-plugin no replace of this in global scope this in function expression 1`] = `
"var m = function () {
  this.BEM = 11;
};"
`;

exports[`this-replacing-babel-plugin replace of this in global scope conditional 1`] = `"m = 42 ? window.alert : window.confirm;"`;

exports[`this-replacing-babel-plugin replace of this in global scope iife 1 1`] = `
"(function () {
  window.Q = 4;
})();"
`;

exports[`this-replacing-babel-plugin replace of this in global scope iife 2 1`] = `
"~function () {
  window.Q = 4;
}();"
`;

exports[`this-replacing-babel-plugin replace of this in global scope iife 2 2`] = `
"(function () {
  window.Q = 4;
})();"
`;

exports[`this-replacing-babel-plugin replace of this in global scope simple 1`] = `"window.BEM = function () {};"`;

exports[`this-replacing-babel-plugin replace of this in global scope typeof 1`] = `"if (typeof window.Q === undefined) {}"`;
